# eagle-bank-rest-api

./: .dockerignore  .env.example  .gitignore  JACK_NOTES.md  LICENSE  README.md  openapi.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  access.py  config.py  db.py  dependencies.py  errors.py  main.py
app/models/: __init__.py  account.py  transaction.py  user.py
app/routers/: __init__.py  accounts.py  auth.py  health.py  transactions.py  users.py
app/schemas/: __init__.py  account.py  auth.py  common.py  transaction.py  user.py
app/services/: __init__.py  account.py  auth.py  transaction.py  user.py
docs/: implementation-checklist.md
tests/: conftest.py  helpers.py  test_accounts.py  test_transactions.py  test_user_auth.py
