[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "eagle-bank-rest-api"
version = "1.0.0"
description = "A FastAPI portfolio project demonstrating a versioned banking REST API."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jack Bishop" }]
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "pydantic>=2.10,<3.0",
    "python-jose[cryptography]>=3.3,<4.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<10.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
